# cpp_learning_notes

./: CMakeLists.txt  maxOnes.cpp
Ladders/: <=1300.cpp
algorithms/: 2_pointers.cpp  div_up.cpp  finding_divisors.cpp  gcd.cpp  prime_check.cpp
algorithms/1000/8_02_24/: 131A.cpp  1A.cpp  58A.cpp
algorithms/1000/9_02_24/: 230A.cpp  579A.cpp
algorithms/800/not_solution/: 32B.cpp  431A.cpp
algorithms/800/realization/: 1283A.cpp  1294A.cpp  1311A.cpp  1353B.cpp  1535A.cpp  1542A.cpp  155A.cpp  1560A.cpp  1619A.cpp  1676B.cpp  1692A.cpp  1722A.cpp  1722B.cpp  1742B.cpp  1873B.cpp  228A.cpp  344A.cpp  705A.cpp  791_A.cpp  935A.cpp  959A.cpp  9A.cpp  Test.cpp
algorithms/800/string/: 1791A.cpp  281_A.cpp  59_A.cpp
algorithms/900/realisation_/: 1343A.cpp  1374B.cpp  1475A.cpp  1475B.cpp  149A.cpp  34B.cpp  405A.cpp  451A.cpp  460A.cpp
algorithms/900/string/: 133A.cpp  96A.cpp
algorithms/Ladders/: <=1300.cpp
algorithms/acmp/: 9.09.24.cpp
algorithms/bitmasks/: bitmasks.cpp  bitmasks_and_bitwise_operations.cpp
algorithms/codeforces_new/: 800.cpp
algorithms/contests/: 928_div_4.cpp  932_round_div_2.cpp  Educational_Codeforces_Round_162_Div_2.cpp  Round_927_div3.cpp  round_640_div4.cpp  round_924_div_2.cpp  round_929_div3.cpp  think_cell_Round1.cpp
algorithms/contests/922_Div_2/: C.cpp
algorithms/cses/: cses.cpp
algorithms/dp/: dp.cpp  dp_codeforces.cpp  dp_nlogn.cpp
algorithms/graphs/: graph.cpp  graph_nlong.cpp
algorithms/intern_ship/: contest.cpp  yandex_contest.cpp
algorithms/kurs_mirea/1_level/: linear_processing_of_arrays_or_strings.cpp  moves_on_the_plane.cpp
algorithms/kurs_mirea/olympyk_programming_c++/: 1_leson.cpp
algorithms/string/: prefix_function.cpp
algorithms/yandex_training/1_0/1/: A.cpp
algorithms/yandex_training/1_0/2/: D.cpp  F.cpp  min.cpp
codeforces/: 2044A.cpp  2044B.cpp  2044C.cpp  2044D.cpp  944_Round_Div_4.cpp  952_Round_Div_4.cpp  964Round_Div_4.cpp  991_Round_Div_3.cpp  995round_div_3.cpp  Round_984_Div_3.cpp  Round_988_Div_3.cpp  something_code.cpp
codeforces/1000/8_02_24/: 118A.cpp  122A.cpp  479A.cpp  69A.cpp
codeforces/1000/9_02_24/: 339B.cpp  379A.cpp  43A.cpp
codeforces/800/arrays/: 231_A.cpp  263_A.cpp
codeforces/800/realization/: 1360A.cpp  1367B.cpp  1370A.cpp  1371A.cpp  1426A.cpp  1433A.cpp  1472A.cpp  1472B.cpp  1512A.cpp  1551A.cpp  1624A.cpp  1676A.cpp  1703B.cpp  1791B.cpp  1829A.cpp  1850A.cpp  1873A.cpp  266_B.cpp  381A.cpp  467A.cpp  469A.cpp  707A.cpp  749A.cpp  750A.cpp  80A.cpp  977_A.cpp  996A.cpp
codeforces/800/string/: 1367A.cpp  236_A.cpp  339_A.cpp
codeforces/900/razbor/: 337A.cpp
codeforces/900/realisation_/: 1335B.cpp  160A.cpp  1642B.cpp  313A.cpp  556A.cpp  580A.cpp
codeforces/900/string/: 208A.cpp
codeforces/971 Round Div_4/: 2009A.cpp  2009B.cpp  2009C.cpp
codeforces/993 Round Div4/: 2044B.cpp  2044D.cpp
codeforces/arrays/: 158_A.cpp  282_A.cpp
codeforces/contests/: 926_div_2.cpp  round_925_div_3.cpp
codeforces/contests/Codeforces_Round _921_Div_2/: A.cpp
codeforces/contests/training/920Div_3/: 920_A.cpp
codeforces/ideas/: idea#1.md
codeforces/not_solution/: 472A.cpp  490A.cpp
codeforces/realization/: 1030A.cpp  110_A.cpp  1367B.cpp  136A.cpp  1374A.cpp  1669A.cpp  1742A.cpp  1760A.cpp  1807A.cpp  427A.cpp  432A.cpp  61A.cpp  630A.cpp  677_A.cpp  703A.cpp  758A.cpp
codeforces/string/: 266_A.cpp  734_A.cpp
codeforces/vk made/: sort.cpp
codeforces_new/: 800.cpp  Round_957(div3).cpp
kurs_mirea/1_level/: Formuls.cpp  String_processing.cpp  moves_on_the_plane.cpp  time.cpp
misis_acm_spring/STL/: STL.cpp
misis_acm_spring/binsearch/: binsearch_problems.cpp  binsearchsStressTest.cpp
misis_acm_spring/bor/: bor.cpp
misis_acm_spring/hash/: hash.cpp
misis_acm_spring/prefix_sum_4_03_24/: prefix_sum.cpp  prefix_sum_5_03_24.cpp
misis_acm_spring/root_decompos/: root.cpp
misis_acm_spring/root_decomposition/: A_root.cpp
misis_acm_spring/segment_tree/: segment_tree.cpp  segment_tree_A.cpp  segment_tree_B.cpp  segment_tree_C.cpp  segment_tree_count_min.cpp  segment_tree_min.cpp  segment_tree_on_points.cpp  segment_tree_sum_A_itmo.cpp
misis_acm_spring/sparse_table/: sparse_table.cpp  sparse_table_version_peltorator.cpp
misis_acm_spring/stress_test/: stress_test.cpp
misis_acm_spring/ternar_search/: ternar_search.cpp
misis_acm_spring/yandex/: 1_homework.cpp  linear_search.cpp
nlogn/1/: 1D.cpp
yandex_training/1_0/1/: B.cpp  C.cpp
yandex_training/1_0/2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
yandex_training/1_0/Set/: A.cpp  B.cpp
