cmake_minimum_required(VERSION 3.27)
project(algos)

set(CMAKE_CXX_STANDARD 17)

add_executable(algos main.cpp)
add_executable(1920 "codeforces/800/arrays/231_A.cpp")
add_executable(158_A codeforces/800/arrays/158_A.cpp)
add_executable(282_A codeforces/800/arrays/282_A.cpp)
add_executable(263_A codeforces/800/arrays/263_A.cpp)
add_executable(339_A codeforces/800/string/339_A.cpp)
add_executable(281_A codeforces/800/string/281_A.cpp)
add_executable(236_A codeforces/800/string/236_A.cpp)
add_executable(266_A codeforces/800/string/266_A.cpp)
add_executable(791_A codeforces/800/realization/791_A.cpp)
add_executable(59_A codeforces/800/string/59_A.cpp)
add_executable(977_A codeforces/800/realization/977_A.cpp)
add_executable(110_A codeforces/800/realization/110_A.cpp)
add_executable(734_A codeforces/800/string/734_A.cpp)
add_executable(677_A codeforces/800/realization/677_A.cpp)
add_executable(266_B codeforces/800/realization/266_B.cpp)
add_executable(Test codeforces/800/realization/Test.cpp)
add_executable(1_A yandex_training/1_0/1/A.cpp)
add_executable(1_B yandex_training/1_0/1/B.cpp)
add_executable(1_C yandex_training/1_0/1/C.cpp)
add_executable(2_A yandex_training/1_0/2/A.cpp)
add_executable(2_B yandex_training/1_0/2/B.cpp)
add_executable(2_C yandex_training/1_0/2/C.cpp)
add_executable(2_D yandex_training/1_0/2/D.cpp)
add_executable(min yandex_training/1_0/2/min.cpp)
add_executable(2_E yandex_training/1_0/2/E.cpp)
add_executable(2_F yandex_training/1_0/2/F.cpp)
add_executable(1030A codeforces/800/realization/1030A.cpp)
add_executable(467A codeforces/800/realization/467A.cpp)
add_executable(344A codeforces/800/realization/344A.cpp)
add_executable(136A codeforces/800/realization/136A.cpp)
add_executable(61A codeforces/800/realization/61A.cpp)
add_executable(228A codeforces/800/realization/228A.cpp)
add_executable(705A codeforces/800/realization/705A.cpp)
add_executable(469A codeforces/800/realization/469A.cpp)
add_executable(996A codeforces/800/realization/996A.cpp)
add_executable(427A codeforces/800/realization/427A.cpp)
add_executable(155A codeforces/800/realization/155A.cpp)
add_executable(381A codeforces/800/realization/381A.cpp)
add_executable(750A codeforces/800/realization/750A.cpp)
add_executable(1742A codeforces/800/realization/1742A.cpp)
add_executable(630A codeforces/800/realization/630A.cpp)
add_executable(1512A codeforces/800/realization/1512A.cpp)
add_executable(1692A codeforces/800/realization/1692A.cpp)
add_executable(32B codeforces/800/not_solution/32B.cpp)
add_executable(472A codeforces/800/not_solution/472A.cpp)
add_executable(758A codeforces/800/realization/758A.cpp)
add_executable(432A codeforces/800/realization/432A.cpp)
add_executable(1676A codeforces/800/realization/1676A.cpp)
add_executable(1560A codeforces/800/realization/1560A.cpp)
add_executable(490A codeforces/800/not_solution/490A.cpp)
add_executable(1367A codeforces/800/string/1367A.cpp)
add_executable(1669A codeforces/800/realization/1669A.cpp)
add_executable(703A codeforces/800/realization/703A.cpp)
add_executable(1807A codeforces/800/realization/1807A.cpp)
add_executable(1791A codeforces/800/string/1791A.cpp)
add_executable(9A codeforces/800/realization/9A.cpp)
add_executable(NOD algorithms/gcd.cpp)
add_executable(1760A codeforces/800/realization/1760A.cpp)
add_executable(1374A codeforces/800/realization/1374A.cpp)
add_executable(431A codeforces/800/not_solution/431A.cpp)
add_executable(1367B codeforces/800/realization/1367B.cpp)
add_executable(1624A codeforces/800/realization/1624A.cpp)
add_executable(1433A codeforces/800/realization/1433A.cpp)
add_executable(1370A codeforces/800/realization/1370A.cpp)
add_executable(80A codeforces/800/realization/80A.cpp)
add_executable(prime_check algorithms/prime_check.cpp)
add_executable(1360A codeforces/800/realization/1360A.cpp)
add_executable(1551A codeforces/800/realization/1551A.cpp)
add_executable(1353B codeforces/800/realization/1353B.cpp)
add_executable(1619A codeforces/800/realization/1619A.cpp)
add_executable(1472B codeforces/800/realization/1472B.cpp)
add_executable(1850A codeforces/800/realization/1850A.cpp)
add_executable(749A codeforces/800/realization/749A.cpp)
add_executable(1535A codeforces/800/realization/1535A.cpp)
add_executable(1283A codeforces/800/realization/1283A.cpp)
add_executable(707A codeforces/800/realization/707A.cpp)
add_executable(1722A codeforces/800/realization/1722A.cpp)
add_executable(1426A codeforces/800/realization/1426A.cpp)
add_executable(div_up algorithms/div_up.cpp)
add_executable(1873A codeforces/800/realization/1873A.cpp)
add_executable(1371A codeforces/800/realization/1371A.cpp)
add_executable(1294A codeforces/800/realization/1294A.cpp)
add_executable(1703B codeforces/800/realization/1703B.cpp)
add_executable(1676B codeforces/800/realization/1676B.cpp)
add_executable(959A codeforces/800/realization/959A.cpp)
add_executable(1742B codeforces/800/realization/1742B.cpp)
add_executable(1829A codeforces/800/realization/1829A.cpp)
add_executable(1722B codeforces/800/realization/1722B.cpp)
add_executable(1542A codeforces/800/realization/1542A.cpp)
add_executable(935A codeforces/800/realization/935A.cpp)
add_executable(1873B codeforces/800/realization/1873B.cpp)
add_executable(1472A codeforces/800/realization/1472A.cpp)
add_executable(1791B codeforces/800/realization/1791B.cpp)
add_executable(1311A codeforces/800/realization/1311A.cpp)
add_executable(96A codeforces/900/string/96A.cpp)
add_executable(160A codeforces/900/realisation_/160A.cpp)
add_executable(133A codeforces/900/string/133A.cpp)
add_executable(405A codeforces/900/realisation_/405A.cpp)
add_executable(580A codeforces/900/realisation_/580A.cpp)
add_executable(208A codeforces/900/string/208A.cpp)
add_executable(337A codeforces/900/razbor/337A.cpp)
add_executable(A "codeforces/contests/Codeforces_Round _921_Div_2/A.cpp")
add_executable(451A codeforces/900/realisation_/451A.cpp)
add_executable(313A codeforces/900/realisation_/313A.cpp)
add_executable(1475A codeforces/900/realisation_/1475A.cpp)
add_executable(finding_divisors algorithms/finding_divisors.cpp)
add_executable(34B codeforces/900/realisation_/34B.cpp)
add_executable(1343A codeforces/900/realisation_/1343A.cpp)
add_executable(1475B codeforces/900/realisation_/1475B.cpp)
add_executable(1374B codeforces/900/realisation_/1374B.cpp)
add_executable(460A codeforces/900/realisation_/460A.cpp)
add_executable(556A codeforces/900/realisation_/556A.cpp)
add_executable(149A codeforces/900/realisation_/149A.cpp)
add_executable(1335B codeforces/900/realisation_/1335B.cpp)
add_executable(1642B codeforces/900/realisation_/1642B.cpp)
add_executable(1462 "codeforces/900/realisation_/1462ะก.cpp")
add_executable(G yandex_training/1_0/2/G.cpp)
add_executable(C codeforces/contests/922_Div_2/C.cpp)
add_executable(3_A yandex_training/1_0/Set/A.cpp)
add_executable(3_B yandex_training/1_0/Set/B.cpp)
add_executable(maxOnes maxOnes.cpp)
add_executable(920_A codeforces/contests/training/920Div_3/920_A.cpp)
add_executable(1A codeforces/1000/8_02_24/1A.cpp)
add_executable(118A codeforces/1000/8_02_24/118A.cpp)
add_executable(69A codeforces/1000/8_02_24/69A.cpp)
add_executable(58A codeforces/1000/8_02_24/58A.cpp)
add_executable(122A codeforces/1000/8_02_24/122A.cpp)
add_executable(479A codeforces/1000/8_02_24/479A.cpp)
add_executable(131A codeforces/1000/8_02_24/131A.cpp)
add_executable(230A codeforces/1000/9_02_24/230A.cpp)
add_executable(339B codeforces/1000/9_02_24/339B.cpp)
add_executable(bitmasks algorithms/bitmasks/bitmasks_and_bitwise_operations.cpp)
add_executable(579A codeforces/1000/9_02_24/579A.cpp)
add_executable(43A codeforces/1000/9_02_24/43A.cpp)
add_executable(379A codeforces/1000/9_02_24/379A.cpp)
add_executable(1D nlogn/1/1D.cpp)
add_executable(2B nlogn/2/2B.cpp)
add_executable(1915A_div4 algorithms/bitmasks/bitmasks.cpp)
add_executable(round_924_div_2 codeforces/contests/round_924_div_2.cpp)
add_executable(2-pointer "algorithms/2_pointers.cpp")
add_executable(round_925_div_3 codeforces/contests/round_925_div_3.cpp)
add_executable(round_926 codeforces/contests/926_div_2.cpp)
add_executable(prefix_sum misis_acm_spring/prefix_sum_4_03_24/prefix_sum.cpp)
add_executable(think_cell_Round1 codeforces/contests/think_cell_Round1.cpp)
add_executable(Round_927_div3 codeforces/contests/Round_927_div3.cpp)
add_executable(928_div_4 codeforces/contests/928_div_4.cpp)
add_executable(dp algorithms/dp/dp.cpp)
add_executable(dp_nlogn algorithms/dp/dp_nlogn.cpp)
add_executable(dp_codeforces algorithms/dp/dp_codeforces.cpp)
add_executable(Educational_Codeforces_Round_162_Div_2 codeforces/contests/Educational_Codeforces_Round_162_Div_2.cpp)
add_executable(graph algorithms/graphs/graph.cpp)
add_executable(graph_nlong algorithms/graphs/graph_nlong.cpp)
add_executable(round_640_div4 codeforces/contests/round_640_div4.cpp)
add_executable(Formuls kurs_mirea/1_level/Formuls.cpp
)
add_executable(String_processing kurs_mirea/1_level/String_processing.cpp)
add_executable(1300 Ladders/<=1300.cpp)
add_executable(linear_processing_of_arrays_or_strings kurs_mirea/1_level/linear_processing_of_arrays_or_strings.cpp)
add_executable(round_929_div3 codeforces/contests/round_929_div3.cpp)
add_executable(moves_on_the_plane kurs_mirea/1_level/moves_on_the_plane.cpp)
add_executable(time kurs_mirea/1_level/time.cpp)
add_executable(1_homework misis_acm_spring/yandex/1_homework.cpp)
add_executable(1_leson kurs_mirea/olympyk_programming_c++/1_leson.cpp)
add_executable(932_round_div_2 codeforces/contests/932_round_div_2.cpp)
add_executable(prefix_sum_5_03_24 misis_acm_spring/prefix_sum_4_03_24/prefix_sum_5_03_24.cpp)
